# ubo-grpc-clients

./: .gitignore  README.md  buf.yaml
nodejs/protobufjs/: README.md  client.ts  package-lock.json  package.json  tsconfig.json
nodejs/protoc-gen-ts/: README.md  client.ts  package-lock.json  package.json
nodejs/ts-proto/: README.md  client.ts  package-lock.json  package.json  tsconfig.json
python/: .gitignore
python/betterproto/: README.md  client.py  pyproject.toml
web/grpc-web/: README.md  envoy.yaml.tmpl  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/grpc-web/src/: client.ts
web/grpc-web/static/: index.html
